[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Sprites/BadCellsDivide.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/BadCell.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Virus.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 240, 90 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 240, 90 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 90, 240, 90 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 240, 90, 240, 90 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 240, 90 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 240, 180, 240, 90 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 270, 240, 90 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 90, 90, 90 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 90, 90, 90, 90 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Divide",
"speed": 15.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 34.9185

[sub_resource type="CircleShape2D" id=15]
radius = 50.0

[node name="Virus" type="KinematicBody2D" groups=[
"Enemies",
]]
script = ExtResource( 3 )
Cell = null
MutationColors = [ Color( 0.513726, 0.823529, 0.254902, 0.490196 ), Color( 0.188235, 0.980392, 0.27451, 0.490196 ), Color( 0.2, 0.2, 0.2, 0.490196 ), Color( 1, 0, 0, 0.490196 ), Color( 0, 0.670588, 1, 0.490196 ) ]

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.513726, 0.823529, 0.254902, 1 )
material = SubResource( 1 )
frames = SubResource( 13 )
animation = "Default"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 14 )

[node name="CellDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CellDetectionArea"]
shape = SubResource( 15 )

[node name="ReproductionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SelfDestruction" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AtkCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VirusNewSpawn" type="Position2D" parent="."]
position = Vector2( -55, 0 )

[node name="VirusNewSpawn2" type="Position2D" parent="."]
position = Vector2( 55, 0 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="CellDetectionArea" to="." method="_on_CellDetectionArea_area_entered"]
[connection signal="timeout" from="ReproductionTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SelfDestruction" to="." method="_on_SelfDestruction_timeout"]
[connection signal="timeout" from="AtkCooldown" to="." method="_on_AtkCooldown_timeout"]
